dawarich/network-policy-dawarich-allow-egress-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dawarich-allow-egress-db
  namespace: dawarich
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - dawarich
          - photon
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: dawarich-postgres
      ports:
        - protocol: TCP
          port: 5432
    # Required for DATABASE_HOST=postgres-postgresql.db.svc.cluster.local
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: db
      ports:
        - protocol: TCP
          port: 5432
